--- a/src/scss/components/_card.scss
+++ b/src/scss/components/_card.scss
@@ -14,6 +14,7 @@
   padding: var(--md-sys-space-medium);
   color: var(--md-sys-color-on-surface);
   overflow: hidden;
+  max-width: 860px;
 
   &--outlined {
     box-shadow: none;
@@ -38,6 +39,7 @@
     align-items: center;
     gap: var(--md-sys-space-small);
     margin-bottom: var(--md-sys-space-small);
+    padding-inline: var(--md-sys-space-small);
 
     &-text {
       flex: 1;
@@ -57,6 +59,7 @@
     width: 40px;
     height: 40px;
     border-radius: 50%;
+    padding: var(--md-sys-space-medium);
     background-color: var(--md-sys-color-primary-container);
     display: flex;
     align-items: center;
@@ -68,6 +71,7 @@
   &__content {
     @include typography(body-medium);
     color: var(--md-sys-color-on-surface);
+    padding-inline: var(--md-sys-space-small);
   }
 
   &__actions {
@@ -76,4 +80,11 @@
     gap: var(--md-sys-space-small);
     margin-top: var(--md-sys-space-medium);
   }
+}
+
+.card__content,
+.card__header-title,
+.card__header-subtitle {
+  word-wrap: break-word;
+  overflow-wrap: anywhere;
 }
