--- a/src/scss/base/_typography.scss
+++ b/src/scss/base/_typography.scss
@@ -1,18 +1,22 @@
 @use "../tokens/system-tokens" as *;
 @use "../mixins/typography" as *;
+@use "sass:list";
+@use "sass:map";
 
 // ======================================================================
-// Typography System                                                    =
-//                                                                      =
-// Purpose:                                                             =
-//    - Set default typography styles for HTML elements.                =
-//    - Generate utility classes like .body-medium, .title-large, etc.  =
-//    - Provide CSS variables for dynamic typography control.           =
-//                                                                      =
-// Rules:                                                               =
-//    - SCSS tokens used internally for structure.                      =
-//    - CSS variables exposed for runtime adjustments.                  =
-//    - Typography is scalable and easily customizable.                 =
+// Typography System
+// ======================================================================
+//
+// Purpose:
+//    - Set default typography styles for HTML elements.
+//    - Generate utility classes like .body-medium, .title-large, etc.
+//    - Provide CSS variables for dynamic typography control.
+//
+// Rules:
+//    - SCSS tokens used internally for structure.
+//    - CSS variables exposed for runtime adjustments.
+//    - Typography is scalable and easily customizable.
+//
 // ======================================================================
 
 // =============================
@@ -51,8 +55,8 @@ button { @include typography("label-large"); }
 
 :root {
   @each $style, $values in $md-sys-typography {
-    --md-sys-typography-#{$style}-font-size: #{nth($values, 1)};
-    --md-sys-typography-#{$style}-line-height: #{nth($values, 2)};
-    --md-sys-typography-#{$style}-font-weight: #{nth($values, 3)};
+    --md-sys-typography-#{$style}-font-size: #{list.nth($values, 1)};
+    --md-sys-typography-#{$style}-line-height: #{list.nth($values, 2)};
+    --md-sys-typography-#{$style}-font-weight: #{list.nth($values, 3)};
   }
 }
